5gsec/oai-core/netpol-core-smf.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-core-smf
  namespace: oai-core
spec:
  podSelector:
    matchLabels: 
      workload.nephio.org/oai: smf # Applies to pods with label 'app=pod1'
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          workload.nephio.org/oai: upf # Allows traffic to pods with label 'app=pod2'
    ports:
    - protocol: TCP
      port: 80
    - protocol: UDP
      port: 8085  # n4
